# swc-plugin-react-remove-prop-types

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
examples/: usage.rs  usage_npm.rs
examples/fixtures/usage_npm/: .swcrc  Component.tsx
src/: lib.rs
